--- a/Bangladesh20.css
+++ b/Bangladesh20.css
@@ -2,7 +2,6 @@
 
 /* Global Reset */
 * {
-    margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
@@ -58,23 +57,21 @@ header {
     left: 0;
     right: 0;
     background: transparent;
-    padding: 25px 5%;
-    z-index: 1000;
-    transition: all 0.3s ease;
+    padding: 30px;
 }
 
 nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    max-width: 1200px;
+    max-width: 1100px;
     margin: 0 auto;
 }
 
 .header-logo {
-    font-size: 1.5rem;
+    font-size: 25px;
     font-weight: 600;
-    color: #004d40;
+    color: #050505;
     text-decoration: none;
     margin-right: auto;
 }
@@ -95,18 +92,17 @@ header button:hover {
 }
 
 /* Add this to prevent content overlap */
-main {
-    margin-top: 80px; /* Adjust based on your header height */
-}
+/* main {
+    margin-top: 80; /* Adjust based on your header height 
+} */
 /* Banner Section */
 .banner {
     display: flex;
     justify-content: space-between;
     align-items: center;
     background: #d4ede1;
-    padding: 50px;
     border-radius: 10px;
-    margin-top: 130px;
+    margin-top: 100px;
 }
 
 .banner-text {
